cmake_minimum_required(VERSION 4.0)
project(Memory)

set(CMAKE_CXX_STANDARD 26)

add_executable(Memory
        ../Code/main.cpp
)

C:\Users\24452\AppData\Local\Android\Sdk\ndk\27.3.13750724\prebuilt\windows-x86_64\bin\make.exe

C:\Users\24452\AppData\Local\Android\Sdk\ndk\27.3.13750724\toolchains\llvm\prebuilt\windows-x86_64\bin\clang.exe

C:\Users\24452\AppData\Local\Android\Sdk\ndk\27.3.13750724\toolchains\llvm\prebuilt\windows-x86_64\bin\clang++.exe

-DCMAKE_SYSTEM_NAME=Android
-DANDROID_ABI=arm64-v8a
-DANDROID_PLATFORM=android-27
-DCMAKE_ANDROID_NDK=C:/Users/24452/AppData/Local/Android/Sdk/ndk/27.3.13750724
-DCMAKE_ANDROID_NDK_TOOLCHAIN_VERSION=clang++
-DCMAKE_TOOLCHAIN_FILE=C:/Users/24452/AppData/Local/Android/Sdk/ndk/27.3.13750724/build/cmake/android.toolchain.cmake